# HemorrhageDetection

./: CMakeLists.txt
includes/: ChainOfResponsibility.h  Helper.h  IO.h
includes/Masking/: Masking.h  MaskingStrategy.h  defaultParameters.txt
includes/Masking/MaskingMethods/: RayMasking.h  RegularMasking.h
lib/: ChainOfResponsibility.cpp  Helper.cpp  IO.cpp  Masking.cpp  RayMasking.cpp  RegularMasking.cpp
src/: BrainDamageAnalysis.cpp
